# rconfig

./: Cargo.toml  README.md  build.rs
example/example/: Cargo.toml  config.toml
example/example/src/: main.rs
example/fake-hal/: Cargo.toml
example/fake-hal/config/: rconfig.toml
example/fake-hal/src/: lib.rs
example/fake-wifi/: Cargo.toml  build.rs
example/fake-wifi/config/: rconfig.toml
example/fake-wifi/src/: lib.rs
rconfig-tui/: Cargo.toml
rconfig-tui/src/: main.rs
src/: lib.rs
